Add remaining files.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ description = "Safe regular expression library"
 edition = "2018"
 keywords = ["regex", "re", "regexp", "regular", "expression"]
 license = "Apache-2.0"
-name = "safe-regex-rs"
+name = "safe-regex"
 readme = "Readme.md"
 repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
 version = "0.1.0"
