Move cargo/ and cargo-geiger/ dirs out of package source dir, to stop them from getting included in cargo-geiger report.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,25 +6,25 @@ stages:
   - stage1
 
 variables:
-  CARGO_HOME: $CI_PROJECT_DIR/cargo
+  CARGO_HOME: $CI_BUILDS_DIR/cargo
 
 before_script:
   - rustc --version && cargo --version
   - du -sh cargo/ */target/ || true
   - cargo install cargo-readme
-  - git clone https://github.com/rust-secure-code/cargo-geiger.git
-  - (cd cargo-geiger/cargo-geiger ; cargo build --release --features vendored-openssl)
-  - mv cargo-geiger/target/release/cargo-geiger $CARGO_HOME/bin/
+  - git clone https://github.com/rust-secure-code/cargo-geiger.git $CI_BUILDS_DIR/cargo-geiger
+  - (cd $CI_BUILDS_DIR/cargo-geiger/cargo-geiger ; cargo build --release --features vendored-openssl)
+  - mv $CI_BUILDS_DIR/cargo-geiger/target/release/cargo-geiger $CARGO_HOME/bin/
 
 after_script:
-  - du -sh cargo/ */target/ || true
+  - du -sh $CI_BUILDS_DIR */target/ || true
 
 cache:
   # Increment the 'gen' number to clear the caches.
   key: $CI_JOB_NAME-$CI_COMMIT_BRANCH-gen1
   paths:
     - target/
-    - cargo/
+    - $CI_BUILDS_DIR/
 
 rust-stable:
   stage: stage1
