Move cargo dir back under the project dir so it can be cached

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,8 @@ stages:
   - stage1
 
 variables:
-  CARGO_HOME: $CI_BUILDS_DIR/cargo
+  CARGO_HOME: $CI_PROJECT_DIR/.cargo
+  CARGO_TARGET_DIR: $CI_PROJECT_DIR/target
 
 before_script:
   - rustc --version && cargo --version
