Fix CI to use proper dir.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,11 +11,11 @@ variables:
 
 before_script:
   - rustc --version && cargo --version
-  - du -sh $CARGO_HOME/ target/ || true
+  - du -sh "$CARGO_HOME"/ target/ || true
   - cargo install cargo-readme
 
 after_script:
-  - du -sh $CARGO_HOME/ target/ || true
+  - du -sh "$CARGO_HOME"/ target/ || true
 
 cache:
   # Increment the 'gen' number to clear the caches.
@@ -31,9 +31,9 @@ rust-stable:
     # Once cargo-geiger-serde builds on nightly,
     # move the build commands up to `before_script`.
     # https://github.com/rust-secure-code/cargo-geiger/issues/181
-    - git clone https://github.com/rust-secure-code/cargo-geiger.git $CI_BUILDS_DIR/cargo-geiger
-    - (cd $CI_BUILDS_DIR/cargo-geiger/cargo-geiger ; cargo build --release --features vendored-openssl)
-    - mv $CI_BUILDS_DIR/cargo-geiger/target/release/cargo-geiger $CARGO_HOME/bin/
+    - git clone https://github.com/rust-secure-code/cargo-geiger.git "$CI_BUILDS_DIR"/cargo-geiger
+    - (cd "$CI_BUILDS_DIR"/cargo-geiger/cargo-geiger ; cargo build --release --features vendored-openssl)
+    - mv "$CARGO_TARGET_DIR"/release/cargo-geiger "$CARGO_HOME"/bin/
 
     - cargo fmt --version || rustup component add rustfmt
     - cargo clippy --version || rustup component add clippy
