--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 # https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
 [workspace]
 members = [
-    "safe-regex",
-    "safe-regex-macro",
+    #"safe-regex",
+    #"safe-regex-macro",
     "safe-regex-parser",
 ]
