--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,10 @@ rust-stable:
     # Once cargo-geiger-serde builds on nightly,
     # move the build commands up to `before_script`.
     # https://github.com/rust-secure-code/cargo-geiger/issues/181
+    # Once cargo-geiger releases 0.11, install it with cargo not git.
+    # https://github.com/rust-secure-code/cargo-geiger/issues/177
     - git clone https://github.com/rust-secure-code/cargo-geiger.git "$CI_BUILDS_DIR"/cargo-geiger
-    - (cd "$CI_BUILDS_DIR"/cargo-geiger/cargo-geiger ; cargo build --release --features vendored-openssl)
+    - (cd "$CI_BUILDS_DIR"/cargo-geiger/cargo-geiger && git checkout 2c03b2c7370da1b040e09de630816a3632a96cf0 && cargo build --release --features vendored-openssl)
     - mv "$CARGO_TARGET_DIR"/release/cargo-geiger "$CARGO_HOME"/bin/
 
     - cargo fmt --version || rustup component add rustfmt
