--- a/safe-regex-macro-impl/Cargo.toml
+++ b/safe-regex-macro-impl/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 authors = ["Michael Leonhard <michael@leonhardllc.com>"]
 categories = ["parsing", "text-processing"]
-description = "Safe library for parsing regular expressions"
+description = "Implementation of the safe-regex-macro crate"
 edition = "2018"
 keywords = ["regex", "re", "regexp", "regular", "expression"]
 license = "Apache-2.0"
-name = "safe-regex-parser"
+name = "safe-regex-macro-impl"
 readme = "Readme.md"
 repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
 version = "0.1.0"
