--- a/safe-regex-macro/Cargo.toml
+++ b/safe-regex-macro/Cargo.toml
@@ -15,7 +15,6 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
+safe-regex-macro-impl = { version = "^0.1.0", path = "../safe-regex-macro-impl/" }
 
 [dev-dependencies]
-#safe-regex = "^0.1.0"
-safe-regex = { path = "../safe-regex/" }
