--- a/safe-regex-macro/Cargo.toml
+++ b/safe-regex-macro/Cargo.toml
@@ -15,6 +15,6 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
-safe-regex-macro-impl = { version = "^0.1.0", path = "../safe-regex-macro-impl/" }
+safe-regex-compiler = { version = "^0.1.0", path = "../safe-regex-compiler/" }
 
 [dev-dependencies]
