Move impl_regex from safe-regex-macro to safe-regex-compiler.  Wire everything up.  Tests don't pass yet.

--- a/safe-regex-compiler/Cargo.toml
+++ b/safe-regex-compiler/Cargo.toml
@@ -11,5 +11,7 @@ repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
 version = "0.1.0"
 
 [dependencies]
+proc-macro2 = "1"
+quote = "1"
 
 [dev-dependencies]
