Maintainer of `proc-macro2` refused to add `forbid(unsafe_code)` so we add forks `safe-proc-macro2` and `safe-quote`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 # https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
 [workspace]
 members = [
+    "safe-proc-macro2",
+    "safe-quote",
     "safe-regex",
     "safe-regex-macro",
     "safe-regex-compiler",
