Sync safe-proc-macro2 to tag 1.0.24, https://github.com/alexcrichton/proc-macro2/commit/d2c09ab64006df180b2a41b2050336e73a7a531c

--- a/safe-proc-macro2/Cargo.toml
+++ b/safe-proc-macro2/Cargo.toml
@@ -26,7 +26,7 @@ features = ["span-locations"]
 unicode-xid = "0.2"
 
 [dev-dependencies]
-quote = { version = "1.0", default_features = false }
+safe-quote = { version = "1.0", path = "../safe-quote/", default_features = false }
 
 [features]
 proc-macro = []
