Update docs and prepare for publishing

--- a/safe-regex-macro/Cargo.toml
+++ b/safe-regex-macro/Cargo.toml
@@ -17,3 +17,4 @@ safe-proc-macro2 = { version = "1", path = "../safe-proc-macro2/" }
 safe-regex-compiler = { version = "^0.1.0", path = "../safe-regex-compiler/" }
 
 [dev-dependencies]
+safe-regex = { version = "^0.1.0", path = "../safe-regex/" }
